# brainchild

./: .gitignore  CONTRIBUTORS.md  README.md  main.py  model.pt  network.pt  setup.cfg  setup.py
brainchild/: __main__.py  loader.py  preprocess.py  reg_net.py  vnet.py  vnet_train.py
scripts/: driver.py  gcp-bootstrap.sh  gcp-template.sh
tests/: loader_test.py
