[metadata]
name = brainchild
version = 0.1.0-dev
description = Brain Registration and Segmentation
url = https://github.com/dsp-uga/brainchild
maintainer = 'Raj Sivakumar and Maulik Shah'
maintainer_email = 'rs12419@uga.edu'
license = MIT
packages = brainchild

[options]
setup_requires = pytest-runner
tests_require = pytest

[aliases]
test = pytest
